# blockworld

./: .gitignore  CMakeLists.txt  crafting.c  crafting.h  depth_gray.fs  depth_gray.vs  depth_texture.fs  env_test.c  fbo.c  fbo.h  geo.vs  inline_string.py  input.c  input.h  loader.c  loader.h  main.c  main_old.c  materials.c  materials.h  materials.json  model.c  model.h  out.json  pass.c  physics.c  physics.h  quad.c  quad.fs  quad.h  rendering.c  rendering.h  scene.c  scene.h  shader.c  shader.h  shadow_map.vs  strex.c  strex.h  technique.c  (+7 more)
note/: ray_aabb.md
shader/: depth_texture.vs  geo.fs  quad.vs  shadow_map.fs
